--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
              <li><a href="about.html">About</a></li>
              <li><a href="slider.html">Slider</a></li>
              <li><a href="table.html">Table</a></li>
+             <li><a href="canvas.html">Canvas</a></li>
             </ul>
         </nav>
      </div>
