--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="slider.html">Slider</a></li>
         <li><a href="table.html">Table</a></li>
+        <li><a href="canvas.html">Canvas</a></li>
        </ul>
    </nav>
    <div class="right column">
